# whats-on-my-head

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_satellite_table.py  2cff6e67c403_add_norad_cat_id_unique_constraint.py
backend/src/sky_radar/: __init__.py  config.py  logging.py  main.py  models.py
backend/src/sky_radar/api/: dependencies.py  exceptions.py  health.py  satellites.py  trajectory.py  websocket.py
backend/src/sky_radar/infrastructure/: cache.py  rate_limiter.py  websocket_manager.py
backend/src/sky_radar/repositories/: satellite.py
backend/src/sky_radar/schemas/: satellite.py  websocket.py
backend/src/sky_radar/services/: broadcaster.py  celestrak.py  tle_sync.py  tracker.py
backend/tests/: conftest.py  test_api.py  test_integration.py  test_repository.py  test_services.py  test_tracker.py
docker/: docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.full.yml  docker-compose.infra.yml
docs/plans/: plan.md
frontend/: Dockerfile  app.vue  nginx.conf  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/components/: SatelliteMap.vue  SatelliteSearch.vue
frontend/composables/: useWebSocket.ts
frontend/tests/: setup.ts  useWebSocket.test.ts
